--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,16 +12,18 @@ body{
     background-image: linear-gradient(to top, #4E248C, #6416DB);
 }
 
-img#img-log{
-    position: absolute;
+div#imagem{
+    z-index: 1;
+    background-image: url('../imagens/pexels-sean-whang-804269\ \(1\).jpg');
+    background-size: cover;
+    background-position: left bottom;
     width: 300px;
     height: 300px;
-    margin: auto;
+    position:absolute;
+    top: 50%;
     left: 50%;
-    top:50%;
-    transform: translate(-50%, -120%);
+    transform: translate(-50%, -80%);
     border-radius: 20px 20px 0 0;
-    box-shadow: 5px 3px 8px black
 }
 
 .corpo{
@@ -31,15 +33,15 @@ img#img-log{
     transform: translate(-50%, -40%);
     margin: auto;
     width: 300px;
-    height: 400px;
+    height: 600px;
     background-color: rgb(255, 255, 255);
-    border-radius: 0 0 20px 20px;
+    border-radius: 20px;
     padding: 10px;
-    box-shadow: 5px 3px 8px black;
+    box-shadow: 3px 2px 12px 2px #0000006b;
 }
 
 .material-symbols-outlined {
-    margin: auto;
+    margin: 4px 0;
     text-align: center;
     border-radius: 5px 0 0 5px;
     width: 40px;
@@ -55,31 +57,43 @@ img#img-log{
 
 #Lemail{
     display: block;
-    background-color: #4e248c2a;
-    margin-top: -30px;
+    background-color: rgba(84, 18, 182, 0.725);
+    margin-top: -37px;
     margin-left: 40px;
+    width: 236px;
+    height: 35px;
+    border-radius: 5px;
+    transform: translateY(0px);
 }
 
 #Lsenha{
     display: block;
-    background-color: #4e248c2a;
-    margin-top: -30px;
+    background-color: rgba(84, 18, 182, 0.725);
+    margin-top: -37px;
     margin-left: 40px;
+    width: 236px;
+    height: 35px;
+    border-radius: 5px;
+    transform: translateY(0px);
 }
 
 main > h1{
     text-align: center;
-    margin-top: 100px;
+    margin-top: 286px;
+}
+
+p#texto2{
+    font-size: 0.8em;
+    margin: 5px 0;
 }
 
 .btn-enviar{
     cursor: pointer;
     color: white;
     font-size: 1.2em;
-    border: none;
-    margin-top: 4px;
+    margin: 0 5px 5px 0px;
     width: 280px;
-    height: 30px;
+    height: 35px;
     background-color: #573ffe;
     border:2px solid #7D39E6;
     border-radius: 5px;
@@ -98,11 +112,11 @@ main > h1{
 .btn-esq{
     display: block;
     text-decoration: none;
-    width: 280px;
-    height: 30px;
+    width: 100%;
+    height: 35px;
     border: 1px solid #7D39E6;
     font-size: 1em;
-    margin-top: 4px;
+    margin: 0 5px 5px 0px;
     text-align: center;
     border-radius: 5px;
 }
@@ -114,10 +128,13 @@ main > h1{
 }
 
 .Campo{
-    border: 2px solid #7D39E6 ;
-    width: 240px;
-    height: 30px;
-    border-radius: 0 5px 5px 0;
+    background-color: #4E248C;
+    border: 2px solid #4e248c ;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius:5px;
+    margin: 0 5px 5px 0;
 }
 
 
