--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,6 +13,7 @@ body{
 }
 
 div#imagem{
+    display: block;
     background-image: url('../imagens/fundologin.jpg');
     background-size: cover;
     background-position: left bottom;
@@ -74,7 +75,7 @@ main > h1{
     margin-top: -2px;
 }
 
-p#texto2{
+p.texto{
     font-size: 0.8em;
     margin: 7px 10px;
 }
