--- a/estilos/mediaqueries.css
+++ b/estilos/mediaqueries.css
@@ -25,7 +25,7 @@ Grande telas: acima de 1200px
         width: 30%;
         height: 100%;
     }
-    p{
+    p.texto2{
         margin-top: 10px;
     }
     .Campo{
@@ -67,7 +67,7 @@ Grande telas: acima de 1200px
         height: 100%;
         background-position: center left;
     }
-    p{
+    p.texto2{
         margin-top:10px ;
     }
     #Lemail{
